--- a/Week 8 File reading/.project
+++ b/Week 8 File reading/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Week 8 File reading</name>
+	<name>Week 8 File Reading</name>
 	<comment></comment>
 	<projects>
 	</projects>
