--- a/Week 9 Error Management/.project
+++ b/Week 9 Error Management/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Week 9 Errors, Exceptions And Debugging</name>
+	<name>Week 9 Error Mangement</name>
 	<comment></comment>
 	<projects>
 	</projects>
