enum demo added

--- a/Week 18 Enums/.project
+++ b/Week 18 Enums/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Week 18 Challenges</name>
+	<name>Week 18 Enums</name>
 	<comment></comment>
 	<projects>
 	</projects>
