--- a/Week 14 Quiz/.project
+++ b/Week 14 Quiz/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Week 14 Quiz</name>
+	<name>Week 14 Quiz Challenge</name>
 	<comment></comment>
 	<projects>
 	</projects>
