--- a/Assessment P3 FT/.project
+++ b/Assessment P3 FT/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Air Traffic Control System</name>
+	<name>Assessment P3 FT</name>
 	<comment></comment>
 	<projects>
 	</projects>
