--- a/Week 32 Revision/.project
+++ b/Week 32 Revision/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Week 32 Revision</name>
+	<name>Week 32 Assessment 3</name>
 	<comment></comment>
 	<projects>
 	</projects>
