--- a/Week 07 Assessment/.project
+++ b/Week 07 Assessment/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Week 07 Assessment</name>
+	<name>Week 07 Assessment 1</name>
 	<comment></comment>
 	<projects>
 	</projects>
