--- a/Week 27 Recusion/.project
+++ b/Week 27 Recusion/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Week 27 Recusion</name>
+	<name>Week 27 Recusion And Revision</name>
 	<comment></comment>
 	<projects>
 	</projects>
