--- a/GeraldCraig40278046P1/.project
+++ b/GeraldCraig40278046P1/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>GeraldCraig40278046P1</name>
+	<name>GeraldCraig_40278046_P1</name>
 	<comment></comment>
 	<projects>
 	</projects>
