--- a/Assessment 3 Aug copy/.project
+++ b/Assessment 3 Aug copy/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Assessment 4</name>
+	<name>Assessment 3 Aug</name>
 	<comment></comment>
 	<projects>
 	</projects>
