--- a/August Assessment/.project
+++ b/August Assessment/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Assessment 3 Aug</name>
+	<name>August Assessment</name>
 	<comment></comment>
 	<projects>
 	</projects>
