--- a/01-CarDatabase/src/main/resources/application.properties
+++ b/01-CarDatabase/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url = jdbc:h2:file:C:/users/Gerald/documents/testdb
+spring.datasource.url =jdbc:h2:mem:testdb
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.jpa.show-sql=true
