--- a/01-CarDatabase/src/main/resources/application.properties
+++ b/01-CarDatabase/src/main/resources/application.properties
@@ -1,4 +1,7 @@
-spring.datasource.url =jdbc:h2:mem:testdb
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-spring.jpa.show-sql=true
+spring.datasource.url=jdbc:mysql://localhost:3306/cardb
+spring.datasource.username=root
+spring.datasource.password=Oce@ns11
+spring.datasource.dbcp2.driver-class-name=com.mysql.jdbc.Driver
+
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create-drop
