--- a/01-CarDatabase/src/main/resources/application.properties
+++ b/01-CarDatabase/src/main/resources/application.properties
@@ -6,4 +6,6 @@ spring.datasource.dbcp2.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create
 
+spring.data.rest.base-path=/api
+
 spring.jpa.show-sql=true
