--- a/04-04-TopTenMusic-Static/src/main/resources/application.properties
+++ b/04-04-TopTenMusic-Static/src/main/resources/application.properties
@@ -2,6 +2,6 @@ server.port=8080
 
 spring.datasource.url=jdbc:mysql://localhost:3306/topten
 spring.datasource.username=root
-spring.datasource.password=Oce@ns11
+spring.datasource.password=root
 spring.datasource.dbcp2.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
