--- a/01-CarDatabase/src/main/resources/application.properties
+++ b/01-CarDatabase/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/cardb
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=
 spring.datasource.dbcp2.driver-class-name=com.mysql.jdbc.Driver
 
 spring.jpa.generate-ddl=true
